# neatbio

./: README.md  README.rst  pyproject.toml
neatbio/: __init__.py  neatbio.py
neatbio/alignments/: __init__.py  alignments.py
neatbio/sequtils/: __init__.py  sequtils.py
tests/: test_neatbio.py
