[tool.poetry]
name = "neatbio"
version = "0.0.1"
description = "NeatBio - a simple Yet Another BioInformatics Library for DNA Sequence"
authors = ["Jesse E.Agbe(JCharis) <jcharistech@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/Jcharis/neatbio"
repository = "https://github.com/Jcharis/neatbio"
keywords = ["neatbio","biopython","jcharistech", "biotite", "BioInformatics","Sequence Analysis","DNA and RNA","scikit-bio","protein synthesis"]

classifiers=[
        "License :: OSI Approved :: MIT License",
        "Programming Language :: Python :: 3",
        "Programming Language :: Python :: 3.5",
        "Programming Language :: Python :: 3.6",
        "Programming Language :: Python :: 3.7",
        "Programming Language :: Python :: 3.8",
        "Operating System :: OS Independent",
    ]

[tool.poetry.dependencies]
python = "^3.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
